[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
fastlem = "0.1.2"
noise = "0.8"
terrain-graph = "1.0"
getrandom = { version = "0.2", features = ["js"] }